# Interval-Theory-in-CP

./: .gitignore  README.md  dependencies.sh  dune-project  index.html
.github/workflows/: main.yml
_build/: .db  .digest-db  log
_build/default/: IntervalTheoryInCP.dune-package  IntervalTheoryInCP.install  IntervalTheoryInCP.opam  LICENSE  README.md
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/7b799aed44581cc79b02033532c5f775/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: IntervalTheoryInCP.cma  IntervalTheoryInCP.cmxa  IntervalTheoryInCP.cmxs  constraints_eval.mli  intervalTheoryInCP.ml-gen
_build/default/lib/.IntervalTheoryInCP.objs/: intervalTheoryInCP__Constraints_eval.impl.d  intervalTheoryInCP__Constraints_eval.intf.d  intervalTheoryInCP__Interval.impl.d  intervalTheoryInCP__Interval.intf.d  intervalTheoryInCP__Lexer.impl.all-deps  intervalTheoryInCP__Lexer.impl.d  intervalTheoryInCP__Memory.impl.all-deps  intervalTheoryInCP__Memory.impl.d  intervalTheoryInCP__Operator.impl.d  intervalTheoryInCP__Parser.impl.d  intervalTheoryInCP__Parser.intf.d  intervalTheoryInCP__Parsing_commands.impl.all-deps  intervalTheoryInCP__Parsing_commands.impl.d  (+5 more)
js/: myjs.bc.js
lib/: constraints_eval.ml  constraints_eval.mli  dune  interval.ml  interval.mli  lexer.mll  memory.ml  operator.ml  parser.mly  tree.ml  tree.mli
lib/intervals/: interval.ml  interval.mli  operator.ml
lib/my_parser/: lexer.mll  parser.mly  parsing_commands.ml
lib/tree/: memory.ml  tree.ml  tree.mli
ressources/: input.txt
test/: dune
(+62 files in other folders)
